add release notes page

--- a/pages/releases/5.5.3.md
+++ b/pages/releases/5.5.3.md
@@ -16,4 +16,4 @@ layout: default
 停留所のお気に入り機能は残してあります！少し見た目が変わってますケドね…！
 
 
-[トップ](/) > [リリースノート](/pages/releases) > 5.5.3
+[トップ](/) > [リリースノート](/pages/releases/releases) > 5.5.3
