fix some release notes

--- a/docs/_posts/2019-11-11-5.5.3.md
+++ b/docs/_posts/2019-11-11-5.5.3.md
@@ -5,15 +5,4 @@ version: 5.5.3
 release_date: 2019-11-11
 ---
 
-・ユーザの皆様に対してよりターゲットを絞ったサポートが出来るよう改善を加えました。
-
-大変お待たせしました！
-待望の iOS13対応及びその新機能ダークモードに対応しました！
-合わせてカラー調を調整したので新しい色合いをお試しください。
-
-一部の調査機関では、ライトモードとダークモードではバッテリー消費率に最大30%もの差があるとの結果が出ているみたいですよ。なんでも、iPhoneの画面を構成する有機ELディスプレイは『黒く光ることができる』からバックライトの必要が無いのだとか…
-
-それともう一つ重大な変更があります。
-路線のお気に入り機能を廃止してしまいました。
-アナリティクスによるとあまり使われていなかったんですよね。あと30路線くらいしかありませんし。使っていてくれた方、ごめんなさい…
-停留所のお気に入り機能は残してあります！少し見た目が変わってますケドね…！
+- ユーザの皆様に対してよりターゲットを絞ったサポートが出来るよう改善を加えました。
