--- a/docs/_posts/2019-10-25-5.5.1.md
+++ b/docs/_posts/2019-10-25-5.5.1.md
@@ -5,7 +5,7 @@ version: 5.5.1
 release_date: 2019-10-25
 ---
 
-・停留所検索を復活しました。
-・AppStoreのスクリーンショットを更新しました。
-・レイアウトを若干調整しました。
-・iOS12以下のサポートを強化しました。
+- 停留所検索を復活しました。
+- AppStoreのスクリーンショットを更新しました。
+- レイアウトを若干調整しました。
+- iOS12以下のサポートを強化しました。
