--- a/docs/_posts/2019-10-30-5.5.2.md
+++ b/docs/_posts/2019-10-30-5.5.2.md
@@ -5,4 +5,4 @@ version: 5.5.2
 release_date: 2019-10-30
 ---
 
-・ユーザの皆様に対してよりターゲットを絞ったサポートが出来るよう改善を加えました。
+- ユーザの皆様に対してよりターゲットを絞ったサポートが出来るよう改善を加えました。
